# watchtower

./: .gitignore  LICENSE  README.md  dprint.json  pyproject.toml  settings.json
.helix/: ignore  languages.toml
src/app/: __main__.py  constants.py  extractor.py  settings.py  utils.py
src/app/browser/: browser.py  context_pool.py  options.py  tab_pool.py
src/app/cli/: main.py  scrape.py
src/app/logger/: enums.py  factory.py  setup.py
src/app/scrapper/: enums.py  models.py  registry.py  scrapper.py
src/app/writer/: enums.py  file.py
